--- a/GetDesignSpaceFiles.sketchplugin/Contents/Sketch/manifest.json
+++ b/GetDesignSpaceFiles.sketchplugin/Contents/Sketch/manifest.json
@@ -4,7 +4,7 @@
     "version" : "1.2",
     "description" : "Open artboards in browser as images",
     "homepage": "https://github.com/alanfraneo/sketch-neo-preview/",
-    "appcast": "https://raw.githubusercontent.com/alanfraneo/sketch-neo-preview/master/appcast.xml",
+    "appcast": "",
     "author" : "Alan Francis",
     "commands" : [
     {
